// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseDatasets should read all datasets when datasetName not provided 1`] = `
Array [
  Object {
    "body": "dataset-name: _jerry
dataset:
  _foe: _tom",
    "dataset": Object {
      "_foe": "_tom",
    },
    "datasetObj": Object {
      "dataset": Object {
        "_foe": "_tom",
      },
      "dataset-name": "_jerry",
    },
    "length": 54,
    "name": "_jerry",
    "start": 58,
  },
  Object {
    "body": "dataset-name: _tom
dataset:
  _food: _jerry",
    "dataset": Object {
      "_food": "_jerry",
    },
    "datasetObj": Object {
      "dataset": Object {
        "_food": "_jerry",
      },
      "dataset-name": "_tom",
    },
    "length": 55,
    "name": "_tom",
    "start": 124,
  },
]
`;

exports[`parseDatasets should read datasets have specified name 1`] = `
Array [
  Object {
    "body": "dataset-name: _jerry
dataset:
  _foe: _tom",
    "dataset": Object {
      "_foe": "_tom",
    },
    "datasetObj": Object {
      "dataset": Object {
        "_foe": "_tom",
      },
      "dataset-name": "_jerry",
    },
    "length": 54,
    "name": "_jerry",
    "start": 58,
  },
]
`;
